testsuite/tests/structs/invalid_field_name/test.out
== internal.lkt ==
internal.lkt:4:5: error: names must start with a letter: '_field'
4 |     _field: Bool
  |     ^^^^^^


== upper.lkt ==
upper.lkt:4:5: error: lower case expected for field names
4 |     A: Bool
  |     ^


lkt_compile: Done
